<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/hive_img"
            android:visibility="gone"/>
        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sh_welcome"
            android:textSize="24sp"
            android:gravity="center"
            app:typeface="roboto_bold"/>
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/txt_swipe_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sh_swipe_instruction"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/on_boarding_label_margin"
            app:typeface="roboto_condensed_regular"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/sign_layout_labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/on_boarding_label_margin"
            android:visibility="gone">
            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sh_already_have_account"
                android:textSize="14sp"
                app:typeface="roboto_condensed_light"
                />
            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/label_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sh_action_sign_in"
                app:typeface="roboto_condensed_light"
                android:padding="5dp"
                android:clickable="true"
                android:onClick="switchToRegister"
                android:textColor="@color/blue_color_scheme_4"/>
         </LinearLayout>
     </LinearLayout>



</RelativeLayout>