<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
        <ProgressBar
            android:id="@+id/app_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <RelativeLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">



            <LinearLayout
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sh_register_store"
                    android:gravity="center"
                    app:typeface="roboto_condensed_light"
                    android:textSize="@dimen/sh_text_medium"/>

                <com.store.hive.custom.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:floatLabelTextAppearance="@style/FloatLabel">

                    <com.devspark.robototextview.widget.RobotoEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sh_full_name"
                        android:singleLine="true"
                        android:inputType="textPersonName|textCapWords"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/user_email"
                        app:typeface="roboto_condensed_light"/>

                </com.store.hive.custom.FloatLabelLayout>

                <com.store.hive.custom.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:floatLabelTextAppearance="@style/FloatLabel">

                    <com.devspark.robototextview.widget.RobotoAutoCompleteTextView
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sh_email"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/user_password"
                        app:typeface="roboto_condensed_light"/>

                </com.store.hive.custom.FloatLabelLayout>

                <com.store.hive.custom.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:floatLabelTextAppearance="@style/FloatLabel">

                    <com.devspark.robototextview.widget.RobotoEditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sh_password"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/user_password_two"
                        app:typeface="roboto_condensed_light"/>

                </com.store.hive.custom.FloatLabelLayout>

                <com.store.hive.custom.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:floatLabelTextAppearance="@style/FloatLabel">

                    <com.devspark.robototextview.widget.RobotoEditText
                        android:id="@+id/user_password_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sh_password_match"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:nextFocusDown="@+id/registerBtn"
                        app:typeface="roboto_condensed_light"/>

                </com.store.hive.custom.FloatLabelLayout>

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sh_register"
                    android:textColor="@android:color/white"
                   />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/loginLink"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sh_sign_in_here"
                    android:textColor="@color/apptheme_color"
                    app:typeface="roboto_condensed_light"
                    android:padding="5dp"/>

            </LinearLayout>

            <include
                layout="@layout/layout_sign_in"
                android:id="@+id/sign_in_layout"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/sh_not_now"
                android:onClick="continueToMainActivity"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>